<resources>

    <string name="app_name">Devinette</string>
    <string name="loading">Loading&#8230;</string>
    <string name="logo_content_desciption">Logo</string>
    <string name="play">Play</string>
    <string name="scores">Scores : </string>
    <string name="about">About</string>
    <string name="hint">Hint</string>
    <string name="validate">Validate</string>
    <string name="your_answer">Type your answer</string>
    <string name="back_btn_clicked">click a second time to exit</string>
    <string name="close">Close</string>
    <string name="hint_title">Hint</string>
    <string name="is_to_come">Is to come ...</string>
    <string name="empty_answer">Veuillez entrer une reponse.</string>
    <string name="number_hint_over">Vous avez épuisé toutes les suggestions possibles</string>
    <string name="pointsGained">Points gained : </string>
    <string name="devinette_finish">Toutes les devinettes ont été jouées, Visualisez vos scores</string>
    <string name="devinette_finish_title">Fin des devinettes</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>

</resources>
